Implementations:  - Added Granger Causality Test  - Added Time Series Data Samples with Granger Causality dataset  - Added Time Series Data Samples with Trend dataset  - Removed Time Series Data Samples dataset  - Changed Double Exponential Smoothing dataset from Time Series Data Samples to Time Series Data Sample With Trend  - Shifted the forecasting curves (A strategy had been used to not discontinue the curve, but this resulted in a wrong RMSE calculation)  - Minor CSS corrections  - "p value" spelling ccorrection

--- a/src/assets/general.css
+++ b/src/assets/general.css
@@ -1,5 +1,9 @@
 html, body, h1, h2, h3, h4, h5, h6, div {
-  padding: 0;
-  border: 0;
-  margin: 0;
+    padding: 0;
+    border: 0;
+    margin: 0;
+}
+
+br {
+    line-height: 10%;
 }
